# ARECCA---REAL-ESTATE-COMPLIANCE-AGENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
.github/workflows/: deploy.yml
configs/: config.yaml
prompts/: summarizer_system.md
prompts/compliance/: compliance_rules_v1.md
prompts/extraction/: lease_extraction_v1.md
scripts/: ingest_lease.py
src/: config.py
src/api/: main.py  routes.py  schemas.py
src/compliance/: engine.py  rules.py
src/core/: context_assembler.py  exceptions.py  llamaindex_setup.py  logging.py  prompt_manager.py  token_counter.py  tracing.py
src/database/: models.py  session.py
src/extraction/: hf_extractor.py  llm_extractor.py  schemas.py
src/graph/: edges.py  graph.py  guardrails.py  nodes.py  state.py  tools.py
src/ingestion/: chunker.py  llamaindex_pipeline.py  parser.py  storage.py
src/memory/: conversation.py  entity_memory.py
src/retrieval/: hybrid_retriever.py
src/ui/: app.py
src/validation/: math_validator.py
src/vectordb/: qdrant_store.py
tests/: test_chunker.py  test_compliance.py  test_graph_tools.py  test_guardrail_efficiency.py  test_guardrails.py  test_llamaindex_pipeline.py  test_math_validator.py  test_parser.py  test_storage.py
