[project]
name = "arecca"
version = "0.1.0"
description = "Automated Real Estate Contract Compliance Auditor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "pymupdf>=1.24.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "qdrant-client>=1.9.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.28.0",
    "sentencepiece>=0.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "google-cloud-storage>=2.10.0",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.8.0",
    "tiktoken>=0.6.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "chainlit>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
